src/bootstrap/test/v0_8/rejects/09_pub_import_collision/main.zg
# requires: v0.18
#
# Two sibling modules both expose a pub `foo`; pub-importing both
# rejects at module-bind time with a focused collision diagnostic.

pub import "first"
pub import "second"

print first.foo()
